--- a/index.html
+++ b/index.html
@@ -75,14 +75,15 @@
 
     <!-- Hero Section start-->
     <section class="hero" id="home">
-      <main class="content">
-        <h1>
-          Enjoy a Cup Of <br />
-          <span>Coffee</span>
-        </h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et.</p>
-        <a href="#" class="cta">Buy Now</a>
-      </main>
+      <div class="mask-container">
+        <main class="content">
+          <h1>
+            Enjoy a Cup Of
+            <span>Coffee</span>
+          </h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et.</p>
+        </main>
+      </div>
     </section>
     <!-- Hero Section end-->
 
