--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <form action="">
           <div class="input-group">
             <i data-feather="user"></i>
-            <input type="text" placeholder="nama" />
+            <input type="text" placeholder="name" />
           </div>
           <div class="input-group">
             <i data-feather="mail"></i>
@@ -247,9 +247,9 @@
           </div>
           <div class="input-group">
             <i data-feather="phone"></i>
-            <input type="text" placeholder="no hp" />
+            <input type="text" placeholder="phone number" />
           </div>
-          <button type="submit" class="btn">Send Mail</button>
+          <button type="submit" class="btn" disabled>Send Mail</button>
         </form>
       </div>
     </section>
